--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1148,4 +1148,13 @@ config TOUCHSCREEN_IST30XX
 	depends on I2C
 
 source "drivers/input/touchscreen/IST30xx/Kconfig"
+
+config TOUCHSCREEN_SWEEP2WAKE
+        bool "Sweep2Wake for touchscreens"
+        default n
+
+config TOUCHSCREEN_DOUBLETAP2WAKE
+	bool "DoubleTap2Wake for touchscreens"
+	default n
+
 endif
