Added sioplus i/o sheduler and set to default

--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -34,7 +34,10 @@ CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_MAPLE=y
-CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_DEFAULT_SIOPLUS=y
+CONFIG_DEFAULT_IOSCHED="sioplus"
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8937=y
 CONFIG_PCI_MSM=y
